# github_actions_test_project

./: BUILD.bazel  Dockerfile  README.md  WORKSPACE.bazel  a.go  b.go
.github/workflows/: action.yml  docker_build.yml  docker_publish.yml
a_app/: BUILD.bazel  a.go
action/: action.go
b_app/: BUILD.bazel  b.go
c_app/: BUILD.bazel  c.go
